--- a/docs/xie-zuo-da-ka/5.19-ri-xie-zuo-da-ka.md
+++ b/docs/xie-zuo-da-ka/5.19-ri-xie-zuo-da-ka.md
@@ -1,2 +1,30 @@
-# 5.19日写作打卡
+# 5.18日写作打卡
 
+## 主题
+
+阅读《定投改变命运・4.4知道和做到之间的距离》，用2W1H分析这篇文章。包括他讲了什么（What）、给的理由（Why）、如何展开（How）。
+## 打卡
+原文:[定投改变命运・4.4 知道做到之间的距离](http://ri.firesbox.com/#/cn/?id=_44-%e7%9f%a5%e9%81%93%e5%81%9a%e5%88%b0%e4%b9%8b%e9%97%b4%e7%9a%84%e8%b7%9d%e7%a6%bb)
+### What  
+文章主要阐述了，知道道理到真正做到，并不简单，有超乎所有人想象的距离。作者通过举例说明了这种情况在现实生活中是处处存在的，再进一步说明在这种情况下，定投策略是适合的优质的策略。
+### Why  
+- **为什么知道与做到之间有这么大的距离？**  
+    - 因为即使简单的知识，也需要很长时间才能不出错。
+    - 现实生活中，很多道理没有办法我们一开始就完全理解，早期的决策也没有之后的丰富经验，需要边做边学，一开始是很难做对的。
+
+### How
+作者举了三个例子来说明知道和做到的鸿沟:
+- 小学时候写字，总是天然的写错，要经过很长时间纠正，才能做到“永不犯错”。
+- 在学习逻辑的时候，作者在经过长时间学习:[Beyond Feelings: A Guide to Critical Thinking](https://www.amazon.com/Beyond-Feelings-Guide-Critical-Thinking/dp/0078038189/),以及各种逻辑学习之后依然发现会经常掉进各种已知逻辑陷阱。然后去新东方教GMAT的时候依然发现很吃力。
+- 在践行群中，跟小伙伴们讲述心理偏差形成原因，产生的效果，避免的可行建议的时候，对于小伙伴而言，听过的道理不会马上生效，在明明知道的情况下，还是会再一次掉进同样的陷阱...
+
+知道与做到之间的鸿沟还有一个隐秘的原因:
+> 之前决策的时候，必然缺乏的是之后的丰富经验。  
+
+- 首先是道理对我们而言存在前置引用，一开始是囫囵吞枣的理解。
+- 更重要的是，一开始我们做出的思考或者决策，没有之后的丰富经验，是非常有自身局限性的，很难一来就做对。
+
+而在投资领域也是如此，知道和做到之间也是有巨大距离，但是采用定投策略有个极大的好处:
+> 我们有很长的时间去学习、观察、实践、以及修正 —— 至少两个大周期的时间，足够任何人走完知道与做到之间那长长的距离……  
+
+因为在投资领域**越早期的错误，代价越高，早期的错误持续越久，长期的代价更是不可想象**。而定投策略由于动作非常简单，只要照做，不会出错，避免了早期由于知道与知道的距离在早期犯下各种各样代价很高的投资错误。
