--- a/docs/xie-zuo-da-ka/5.21-ri-xie-zuo-da-ka.md
+++ b/docs/xie-zuo-da-ka/5.21-ri-xie-zuo-da-ka.md
@@ -8,7 +8,7 @@
 
 ## 打卡
 
-- 并列关系:   
+- **并列关系**:   
     - 并列1  
         - 〇管理费 
         - 〇开润  
@@ -16,12 +16,11 @@
         - BOX就像是一条船
         - 与我一起定投BOX的人就像是那些水手
         - 而我，就好像是奥德修斯一样，把自己绑在了桅杆上
-- 递进关系：  
+- **递进关系**：  
     - 递进1:  
-    
         - 《定投改变命运》不仅仅是一本开源书籍
         - 它还有一个配套产品
-- 转折关系:  
+- **转折关系**:  
     - 转折1:
         - 采用定投策略进行投资，很简单 
         - 却不一定容易
