--- a/docs/xie-zuo-da-ka/5.24-ri-xie-zuo-da-ka.md
+++ b/docs/xie-zuo-da-ka/5.24-ri-xie-zuo-da-ka.md
@@ -1,2 +1,22 @@
-# 5.24日写作打卡
+# 5.23日写作打卡
 
+## 主题
+阅读《围城》第1章，列出其中的3个比喻或类比，写明本体、喻体、喻词。
+
+## 打卡
+
+|类比|本体|喻体|喻词|
+|---|---|---|---|
+|**夜仿佛纸浸了油变成半透明体**  |夜|纸浸了油|仿佛|
+|**海风里早含着燥热，胖人身体给炎风吹干了，上一层汗结的盐霜，仿佛刚在巴勒斯坦的死海里洗过澡**  |胖人身体给炎风吹干了，上一层汗结的盐霜|刚在巴勒斯坦的死海里洗过澡|仿佛|
+|**忠厚老实人的 恶毒，像饭里的砂砾或者出鱼片里示净的刺，会给人一种不期待的伤痛。**  |忠厚老实人的 恶毒|饭里的砂砾;出鱼片里示净的刺|像|
+|**方鸿渐受到两面夹攻，才知道留学文凭的重要。这一张文凭，仿佛有 亚当、夏娃下身那片树叶的功用，可以遮羞包丑**  |文凭|亚当、夏娃下身那片树叶|仿佛|
+|**新派女人的年龄好比旧式女人 婚帖上的年庚，需要考订学家所谓外证据来断定真确性，本身是看不出的。**|新派女人的年龄|旧式女人 婚帖上的年庚|好比|
+|**无论如何，从此他们俩的交情像热带植 物那样飞快的生长**|他们俩的交情|热带植 物|像|
+|**方鸿渐洗了澡，回到舱里，躺下又坐起来，打消已起的念头仿佛跟女人怀孕要打胎一样的难受**|打消已起的念头|女人怀孕要打胎|仿佛|
+|**鱼像海军陆战队，已登陆了好几天**|鱼|海军陆战队|像|
+|**肉像潜水艇士兵，会长时期伏在水里**|肉|潜水艇士兵|佛|
+|**自觉没趣丢脸，像赶在洋车后面的叫化子 ，跑了好些路，没讨到一个小钱，要停下来却又不甘心。**|自觉没趣丢脸的方鸿渐|车后面的叫化子|像|
+|**鸿渐气得心头火直冒，仿佛会把嘴里香烟衔着的一头都烧红了**|气得心头火直冒|嘴里香烟衔着的一头都烧红了|像|
+|**孙太太眼睛 红肿，眼眶似乎饱和着眼泪，像夏天早晨花瓣上的露水，手指那么轻轻一碰就会 掉下来**|眼眶饱和着的眼泪|夏天早晨花瓣上的露水|像| 
+|**苏小姐双颊涂的淡胭脂下面忽然晕出红来 ，像纸上沁的油渍，顷刻布到满脸，腼腆得迷人。**|双颊涂的淡胭脂下面忽然晕出红来|纸上沁的油渍|像|
