--- a/docs/xie-zuo-da-ka/5.25-ri-xie-zuo-da-ka.md
+++ b/docs/xie-zuo-da-ka/5.25-ri-xie-zuo-da-ka.md
@@ -1,2 +1,25 @@
 # 5.25日写作打卡
 
+## 主题
+阅读《围城》第2章，列出其中的3个比喻或类比，写明本体、喻体、喻词。
+
+## 打卡
+
+|类比|本体|喻体|喻词|
+|---|---|---|---|
+|**据说“女朋友”就是“情人”的学名，说起来庄严些，正像玫瑰在生物学上 叫“蔷薇科木本复叶植物，或者休妻的法律术语是“协议离婚””**  |“女朋友”就是“情人”的学名|玫瑰在生物学上 叫“蔷薇科木本复叶植物/妻的法律术语是“协议离婚””|正像|
+|**方鸿渐自信对她的情谊到此而止，好比两条 平行的直线，无论彼此距离怎么近，拉得怎么长，终合不拢来成为一体。**|方鸿渐对苏文执的情谊|两条平行的直线|好比|
+|**觉得这是爱情热烈的安稳，仿佛飓风后的海洋波平浪静，而底下随时潜伏着汹涌翻腾的力量**|爱情热烈的安稳|飓风后的海洋波平浪静，而底下随时潜伏着汹涌翻腾的力量|彷佛|
+|**教育消息栏里印着两张小照 ，铜版模糊，很像乩坛上拍的鬼魂照相**|教育消息栏里印着两张小照|乩坛上拍的鬼魂照相|很像|
+|**理想中的留学回国，好像地面的水，化气升上天空，又变雨回到地面，一世的人都望着、说着**|留学回国|地面的水，化气升上天空，又变雨回到地面|好像|
+|**不知那里的蛙群齐心协力地干号，像声浪给火煮得发沸。几星萤火优游来去，不像飞行，像在厚密的空气里漂浮**|蛙群齐心协力地干号/几星萤火优游来去|声浪给火煮得发沸/厚密的空气里漂浮|像|
+|**月光不到的阴黑处，一点萤火忽明，像夏夜的一只微绿的小眼睛。**|月光不到的阴黑处，一点萤火忽明|夏夜的一只微绿的小眼睛|像|
+|**一梳月亮像形容未长成的女孩子，但见人己 不羞缩**|一梳月亮|形容未长成的女孩子|像|
+|**小城市的摩登姑娘，落伍的时髦，乡气的都市化，活像那第一套中国裁缝仿制的西装，把做样子的外国人旧衣服上两方补钉 ，也照式在衣袖和裤子上做了。**|小城市的摩登姑娘，落伍的时髦，乡气的都市化|第一套中国裁缝仿制的西装，把做样子的外国人旧衣服上两方补钉 ，也照式在衣袖和裤子上做了|活像|
+|**在这种家庭空气里，战争是不可相信的事，好比光天化日 之下没人想到有鬼**|在这种家庭空气里，战争是不可相信的事|光天化日 之下没人想到有鬼|好比|
+|**蓝眼镜拉自己右臂的 那只手也清清楚楚地照进去了，加上自己侧脸惊愕的神情，宛如小偷给人捉住的摄影**|蓝眼镜拉自己右臂的 那只手也清清楚楚地照进去了，加上自己侧脸惊愕的神情|小偷给人捉住的摄影|好比|
+|**拚命追忆 ，只像把筛子去盛水**|拚命追忆|把筛子去盛水|只像|
+|**有几个教师皱着眉头，那记录的女生涨红脸停笔不写，仿佛听了鸿渐最后的一句，处女的耳朵已经当众丧失贞操**|有几个教师皱着眉头，那记录的女生涨红脸停笔不写|处女的耳朵已经当众丧失贞操|彷佛|
+|**方鸿渐那时候宛如隆冬早晨起床的人，好容易用最大努力跳出被窝 ，只有熬着冷穿衣下床，断无缩回去道理。**|在挣扎演讲的方鸿渐|隆冬早晨起床的人，好容易用最大努力跳出被窝 ，只有熬着冷穿衣下床，断无缩回去道理|宛如|
+|**感觉出国这四年光阴，对家乡好像荷叶上泻过的水，留不下一点痕迹**|出国这四年光阴|荷叶上泻过的水，留不下一点痕迹|好像|
+|**所以他说话里嵌的英文字，还比不得嘴里嵌的金牙，因为金牙不仅妆点 ，尚可使用，只好比牙缝里嵌的肉屑，表示饭菜吃得好，此外全无用处**|说话里嵌的英文字|牙缝里嵌的肉屑|好比|
