--- a/docs/xie-zuo-da-ka/5.26-ri-xie-zuo-da-ka.md
+++ b/docs/xie-zuo-da-ka/5.26-ri-xie-zuo-da-ka.md
@@ -1,2 +1,20 @@
 # 5.26日写作打卡
 
+## 主题
+阅读《围城》第3章，列出其中的3个比喻或类比，写明本体、喻体、喻词。
+
+## 打卡
+
+|类比|本体|喻体|喻词|
+|---|---|---|---|
+|**这春所鼓动得人心像婴孩出齿时的牙龈肉，受到一种生 机透芽的痛痒””**  |这春所鼓动得人心|婴孩出齿时的牙龈肉|像|
+|**公园和住宅 花园里的草木，好比动物园里铁笼子关住的野兽，拘束、孤独，不够春光尽情的 发泄**|公园和住宅 花园里的草木|动物园里铁笼子关住的野兽|好比|
+|**可是这欢喜是空的，像小孩子放的气球，上去不到几尺，便爆烈归于乌有，只留下忽忽若 失的无名怅惘**|这欢喜是空的|小孩子放的气球|像|
+|**正想沈子培写“人”字的捺脚活像北平老妈子缠的小脚，上面那样粗挺的腿，下面 忽然微乎其微的一顿，就完事了，也算是脚的**|沈子培写“人”字的捺脚|北平老妈子缠的小脚|活像|
+|**她冷淡的笑容，像阴寒欲雪天的淡日**|冷淡的笑容|阴寒欲雪天的淡日|像|
+|**今天握她的手像捏着冷血的鱼翅**|握她的手|捏着冷血的鱼翅|像|
+|**这时候他的心理，仿佛临考抱佛脚的学生 睡了一晚，发现自以为温熟的功课，还是生的**|他的心理|临考抱佛脚的学生|彷佛|
+**眼里仍没有方鸿渐，但又提防着他，恰像慰问害传染病者的人对细菌的态度**|眼里仍没有方鸿渐，但又提防着他|慰问害传染病者的人对细菌的态度|恰像|
+**她眼睛下两个黑袋，像圆壳行军热水瓶**|眼睛下两个黑袋|圆壳行军热水瓶|像|
+|**他那天晚上的睡眠，宛如粳米粉的线条， 没有粘性，拉不长**|他那天晚上的睡眠|粳米粉的线条|宛如|
+|**他这两天有了意中人以衙，对自己外表上的缺点，知道得不宽假地详尽，仿佛只有一套出客衣服的穷人知道上面每一个斑渍和补钉。**|有了意中人对自己外表的缺点，知道得不宽假的详尽|只有一套出客衣服的穷人知道上面每一个斑渍和补钉|彷佛|
