--- a/docs/xie-zuo-da-ka/5.27-ri-xie-zuo-da-ka.md
+++ b/docs/xie-zuo-da-ka/5.27-ri-xie-zuo-da-ka.md
@@ -1,2 +1,35 @@
 # 5.27日写作打卡
 
+## 主题
+阅读《定投改变命运・3.1屡战屡败不战则胜》，写出所读内容的要点，以及引发了你的哪些思考，不少于300字。
+
+## 打卡
+### 要点
+- 高频交易者或短期策略, 几乎是完全依赖运气的，而非技巧。长期持有或定投策略，几乎是纯技术活,最关键的是谨慎选择投资标的，而后只做一件事，买买买。
+
+- 因为短期价格的随机漫步，高频交易几乎无法避免出错。  
+    - 高频交易要做对两次，正确买和正确卖，每次操作成功率为50%，一步做到，另一步没做到，前功尽弃，所以综合成功率为25%。
+    - 高频交易依赖**滞后判断**,买的时候一段涨幅捕获不了，卖的时候一段跌幅无法逃脱，导致综合捕获利润仅为整体涨幅的1/3。
+    - 每次买卖，真实情况除了涨跌外还包含持平，所以真实情况，每次买/卖猜对的概率变为1/3，成功率将降为1/9
+    - 更为可怕的是，他们还会频繁更换投资标的，每次换标的成功率并不高，频繁换导致更低。
+    - 有些高频交易者还会不断研究各种技术，不断用新学到的技术实践试错，投资领域试错代价很高。
+- 最终高频交易者会发现一个事实: 
+    > 一切的操作竟然全是错的... 
+
+- 定投策略的威力在于只要选择好标的后，绝对不会犯错，不战而胜的道理也在于此，操作越多，犯错越多，长期来看，在同一个赛道上，谁犯错更少，甚至不犯错，就肯定赢了。
+
+### 思考
+看完这一章我的思绪飘得有点远，我想阐述这样一个问题:
+- 短期策略的弊端，逻辑如此的清晰，为什么还是有大量的拥簇者，甚至可以说绝大部分人都是这样的？   
+大部分人都有这种经历: "我知道道理是这样，可是我就是忍不住...?" 其实根源在于:
+> 认知的深度还不够    
+    
+举一个我自己的例子，我之前买了很多各种各样的数字货币，一把梭哈，投入也很大。自以为做好功课，要打算长期持有。买完之后我发现，我每天会忍不住想要去看几次甚至十几次交易所的价格，心情也不可避免的随着价格的波动，有着轻微的亢奋和失落。我明明是长期持有呀!每天怎么波动，不影响我几年之后卖出呀！为什么每天要去看呢？非常懊恼。
+> 我就是管不住自己  
+
+以至于我想了个办法，把手机上的交易所软件放在最后一页，甚至还在上面写了一行字提醒自己:"**一周最多看一次**"，心中默念了五六遍，才心安理得的躺下睡觉。
+![](https://ipfs.io/ipfs/QmVhVf245Z76ME7XyekVvuzNHmBWs2d1X7ee2SZ6mJjBZM?filename=IMG_202144_2239_792486079.jpeg)
+
+可是这样就管用了吗？**没用!没用!完全没用!**。因为还没有撑过一天，我就啪啪啪把我自己的脸都打肿了。半夜，尿意上来，我拿着手机去方便，一阵紧张之后无比轻松。脑子里突然一转：“现在是欧美那边交易的高峰期，币价会不会从昨天大跌之势扭转乾坤。”然后右手熟练的滑动到最后一页，点开菜单，**一周最多看一次**几个大字写在那里就跟贪官家里挂的字画，“两袖清风”一样，如此的讽刺。看着满屏的绿色价格，伸个了舒服的懒腰。此后看价格的频率是不减反增，更加苦恼，不知所措。
+
+后来因为参加了写作营，每天作业都涉及读《定投改变命运》，不得不又把这本书捡起来又再读一遍。这次读为了完成作业，读得精细，居然发现之前读根本就是漏掉了好多细节，我以为我懂了，其实并没有。这一次才真的是对短期，长期有更深的认知，完成了一次逻辑上彻底的说服自己。我才发现以前的我真的有点盲目崇拜的感觉，觉得李笑来厉害，即使他说的一些关键的逻辑点我并没有理解，但是**李老师说对那肯定就是对的**。我开始质疑一些论点，不在迷信李笑来这个人，带着疑问去找答案，发现大部分老师说的确实正确，少部分我依然不甚理解。  这次从逻辑上完成了自我说服的结果是什么呢？我惊奇的发现，在我没有刻意控制自己不去盯盘的情况下，我几乎没打开过交易所软件了。而这一切的根源在于：**认知的深度提高，才能够去控制行为**
