--- a/docs/xie-zuo-da-ka/5.27-ri-xie-zuo-da-ka.md
+++ b/docs/xie-zuo-da-ka/5.27-ri-xie-zuo-da-ka.md
@@ -19,8 +19,8 @@
 - 定投策略的威力在于只要选择好标的后，绝对不会犯错，不战而胜的道理也在于此，操作越多，犯错越多，长期来看，在同一个赛道上，谁犯错更少，甚至不犯错，就肯定赢了。
 
 ### 思考
-看完这一章我的思绪飘得有点远，我想阐述这样一个问题:
-- 短期策略的弊端，逻辑如此的清晰，为什么还是有大量的拥簇者，甚至可以说绝大部分人都是这样的？   
+看完这一章我的思绪飘得有点远，我想阐述这样一个问题:  
+短期策略的弊端，逻辑如此的清晰，为什么还是有大量的拥簇者，甚至可以说绝大部分人都是这样的？   
 大部分人都有这种经历: "我知道道理是这样，可是我就是忍不住...?" 其实根源在于:
 > 认知的深度还不够    
     
