--- a/docs/xie-zuo-da-ka/5.28-ri-xie-zuo-da-ka.md
+++ b/docs/xie-zuo-da-ka/5.28-ri-xie-zuo-da-ka.md
@@ -1,2 +1,27 @@
 # 5.28日写作打卡
 
+## 主题
+阅读《定投改变命运・3.1走过路过不要错过》，写出所读内容的要点，以及引发了你的哪些思考，不少于300字。
+
+## 打卡
+### 要点
+- 投资市场的坏日子无法避免，避开了所有坏日子，等于避开了所有好日子，因为最好的日子总是紧挨着最差的日子。
+
+- 错过所有好日子，投资收益还不如国债收益。
+
+- 坏日子总是比好日子多，但是好日子累计的涨幅远远超过坏日子累计的跌幅。
+- 媒体总是倾向于报道坏消息，以及频繁交易者本身的损失厌恶情绪，两股力量夹持下，很容易在坏日子出售自己的筹码，在随后到临的好日子暴涨时，手里却没有筹码来。
+- 盲从投资建议的缺陷在于因为事实上的无知无法做到坚定。
+- 定投策略的有效性在于，不会错过所有的坏日子和好日子，但是好日子累计的涨幅远远超过坏日子累计的跌幅。
+### 思考
+本章的核心是告诉读者: **一定不要错过好日子**,错过好日子，丧失了大部分收益，甚至连最基准的回报率都达不到。
+很多高频交易者都有这种心态:“这段时间行情不好，如袋为安，不作任何持有。” 中国有句古话特别好:**否极泰来**，最差的时候往往也是最好的时候的前兆。长期视角来看，整个市场是螺旋上升的状态，好日子带来的收益必然高于差日子的损失。  
+
+”行情不好，如袋为安“想法的人的心里想的是:遭遇坏日子的风险太大了吧,所以还是不要持有。可是这句话逆向思维才更正确: 现在确实会遭遇坏日子，但是我不持有的话，**错过好日子的风险太大了吧**。这听起来有点不可思议，因为直觉告诉我们,损失才是更大的风险，可是真相是在经历坏日子好日子之后你的投资数学期望依然大于本金，也就是说必然优于不持有，不持有才是最大的风险！   
+如果告诉你一个游戏:
+> 一个箱子里面有6个白球,3个黑球，1个红球，每次给10块钱摸一个球，摸完球再放回箱子，摸出一个白球奖励8块，黑球5块，红球50块。
+
+问你是否要玩？你会马上回答肯定要玩！**这游戏不玩的风险太大了吧！** 。投入10元，每次游戏期望高达11.3元，你不但要玩，甚至还想玩得越久越好，因为玩得越久，越接近真实的期望值。现在我们回过头来想一想，这和我们在投资市场里面玩得游戏不是如出一辙吗，我们选择了正确的投资标的，也就是说期望值肯定是大于本金的，如果怕遭遇坏日子（黑球），必然错过收益更大的好日子（红球），唯一我们要担心的是，我们能一直玩下去吗？只要能一直玩下去，我们必赢。正如所有赌场的老板一样：**从来不担心赌客赢钱,就怕赌客不来玩了**，游戏的概率从一开始就站在赌场这边。  
+可是真的在投资领域，大多数人的想法还是”行情不好，如袋为安“,做不到长期持有。简单的数学游戏大家都能看懂，包裹上投资这层外衣很多人就被绕晕了，无法看到本质，正如前面有个坑，大家都知道不会往里面跳，但是在坑上面铺一些草，掩饰一下，很多人就扑扑通通都掉下去了。**鱼儿最难的是意识到水的存在**，我想这才是所有人最难的第一步。
+
+
