--- a/docs/xie-zuo-da-ka/5.29-ri-xie-zuo-da-ka.md
+++ b/docs/xie-zuo-da-ka/5.29-ri-xie-zuo-da-ka.md
@@ -1,2 +1,18 @@
 # 5.29日写作打卡
 
+## 主题
+阅读《定投改变命运・4.5主动与被动之间的边界》，写出所读内容的要点，以及引发了你的哪些思考，不少于300字。
+
+## 打卡
+### 要点
+- 投资的秘诀就在于，对客观世界要有百分之百客观的认知，与此同时，还要对自己有百分之百的客观认知。
+- 客观认清，自己与现实的边界，在边界之内，我们可以通过努力不断进取，边界之外不作徒劳的努力。除了自己之外，几乎什么都改变不了。
+- 边界思考，长期视角，宏观观察
+- 社会和市场一样，只有长期视角出发才可能近似公平，每时每刻总是不公平。平静接受自己被低估的情况，跟市场价值一样，被高估的时候总是短暂，甚至干缺被称之为泡沫。
+
+### 思考
+
+本章的核心是告诉读者: **认清自己与现实的边界，在自己边界内拼命努力，边界外用长期视角宏观观察。**   
+在生活中，经常可以看到分不清边界的人，比如喜欢抱怨的人。两年前，我有一个同事，这位仁兄可太喜欢抱怨社会了，小孩在深圳上学没有资格，骂社会不公平;快四十岁了，还没买房，望着房价涨上天，骂万恶的资本主义；甚至有时候闲聊说到中国现在发展很快很好，这位仁兄也会掺和一句，发展这么快还不是政府压榨我们这些普通老百姓换来的。
+
+真的社会就如这位仁兄说的这么不堪吗？我后面了解到，这位仁兄其实十多年前就到深圳了，那时候工资也还算可以，咬咬牙在深圳付个首付也是可以的，可是他干嘛了呢，他和他媳妇每个月消费月光族，每天逍遥自在。不到十年深圳的房价到了他已经高不可攀的地步，可是他有没有幡然醒悟呢？没有，在主动的边界努力程度为0。这老兄想到的只是抱怨社会，抱怨房价是万恶的资本主义搞出来的，可是抱怨没用啊，房价也不会因为你抱怨哪怕跌一点点。这社会恰恰是如此的公平，十年前，大家都在拼命背房价，每天抬头看天都是黑压压的，仁兄你努力了没？十年后你买不起房子可太公平了，不然对那些勤勤恳恳的人可不太不公平了。主动的地方不主动，被动的地方拼命主动,游戏玩输了就坐在地上撒泼打滚，其实游戏玩输了，游戏还在，还可以接着玩，指不定还能翻盘。玩输了，撒泼打滚可就不仅输掉了过去，连未来也搭进去了。
