--- a/docs/xie-zuo-da-ka/5.31-ri-xie-zuo-da-ka.md
+++ b/docs/xie-zuo-da-ka/5.31-ri-xie-zuo-da-ka.md
@@ -1,2 +1,69 @@
 # 5.31日写作打卡
+关于“阅读输入”这件事，思考自己的现状及未来，你是否能做个猛人呢？
+可以参考以下模板：
+- 【我现在是怎么做的？】
+- 【关于这件事的未来，我是如何设想的？】
+- 【我这样做得够猛吗？这件事，能做得久、想得深、干的狠吗？】
+- 【我是否在做需要很久才能获得收益的事情？】
+- 【永远要呵护自己的勇气】
+- 【越是低谷的时候越是要更努力，不要浪费任何一个危机】
+- 【人差一口气，气吞山河的气】
+
+
+# 打卡
+在写“阅读输入“,这件事之前，我想回顾下我自己过往的经历。以前的我是否有过猛人的时候呢？
+好像有一两件，不过持续的时间不长，而且都是有一个共性，**在外力的刺激下。**
+
+还记得九年前刚上大学那会儿,很喜欢一个女孩子，决定在她生日的时候送她一个礼物。这件事情我冥思苦想了几天，
+觉得送什么东西都不酷，决定自己给她做一个音乐盒。说干就干，现在想想确实蛮有勇气的，因为那时候的我
+连怎么做都不知道，所需要的专业知识几乎一窍不通，怎么办？把自己关起来疯狂百度了几天，终于搞清楚了做一个音乐盒
+需要的电路图，音乐盒程序要怎么写。非常激动，在草稿纸上面写下了要买的各种零件:单片机，烙铁，电阻，晶振，蜂鸣器。。。
+，马不停蹄的坐着公交车杀向城隍庙(成都的电子零件批发中心)，辗转四五个店终于配齐了所需的零件。在回来的路上，
+我赶紧给她发了条消息:“等你生日的时候，我会送你一个很酷的礼物。等着吧！哈哈哈”，在脑海里面想到了，女孩打开我
+送给她的音乐盒开心的表情，我不禁嘴角上扬起来，不免有点得意。接下来就开始焊接电路,嵌入代码。这个过程并不顺利，焊接
+电路是一个耐心细致的活，稍有不慎焊接出错，整个板子就坏掉了，坏掉换块板子接着焊；程序还不太会写，只能硬着头皮
+边学边写，反复调试。还记得那是个冬天，每天除了睡觉，就坐在那里不停的折腾，那时候家里还没有空调，都顾不得冷了，以至于那个冬天
+多年没长过冻疮的我，脚上和手上都长了冻疮，等开春后，奇痒无比。整个过程持续了半个月，终于快迎来了曙光，通上电，
+蜂鸣器传来熟悉的滴滴答答的生日快乐歌，那一瞬间差点要跳起来了。等一下！哎呦！怎么显示屏不亮？于是又反复检查了
+电路，代码，还是不亮，没辙了，怎么办？明天就要给女孩了，一瞬间绝望和焦虑的情绪涌上来把我整个吞噬了，我瘫在椅子上，不知所措，
+脑海里几个小人在互相打架。”要不算了吧？反正也弄不好了，明天买个其他礼物送女孩，她也不会怪我啊！”;“你真可笑，花了这么长时间
+做出来一个没用的玩意，自作聪明。”；“真不甘心，现在还有时间，说不定还能弄好呢。”。最后我也不清楚，几个小人大战了几百个回合，
+我坐下来继续找问题，终于在凌晨3点左右，我发现了自己的低级失误，原来是显示屏的驱动电压不够！通电，屏幕上出
+上 XX,生日快乐的文字滚动了起来。此时的我已没什么兴奋劲儿了，又困又饿，倒头便睡了。第二天，女孩在路口等我，那天女孩儿很漂亮，齐刘海
+，干净利落大方，是我喜欢的感觉。我把音乐盒交给了女孩，她看到礼物一瞬间，吃惊到眼睛都快瞪出来了，眼前这个一堆电子零件
+组合在一起的又丑又怪的东西到底是啥，我淡定的告诉她这是音乐盒，她更惊吓到用手捂住了嘴，那画面我至今想起来都觉得好笑。
+后来女孩回到家，在她侄儿的帮助下，找到了那一堆零件中的开关，熟悉的滴滴答答，显示屏上飘来祝福语，女孩给我发了条消息：“很感谢我的
+礼物，很特别。”，我告诉她:”你喜欢就好。“，我知道女孩只是礼貌性的跟我客套，因为这礼物既不浪漫，也不精美，只不过是一个直男的
+一厢情愿的自我感动而已。我顺手淘宝搜了一下，一百块以内就能买到一个精美包装的音乐盒，甚至还有雪花飞舞，一个小人在里面转圈圈。而我
+花了半个多月，才搞出来这一个看起来谈不上美观的音乐盒，百感交集。看着我的写字桌上面写的那句歪歪扭扭的“人生苦短，必须性感”，我想
+你可真他娘的有点生猛。
+
+第二个故事是我毕业三年后的时候，我谈了一个特别喜欢的女朋友，那时候天总是很蓝，日子过得很慢，两个人在一起如胶似漆，感受不到时间的流逝。
+而我自己成都这个安逸的都市，每天正如《成都》里一样，“你会挽着我的衣袖，我会把手揣进裤兜”，慵懒自在。我早已失去了刚毕业的那股拼劲，拿着
+一份不好不坏的工资，进入了职场的瓶颈期。唯一让我烦恼的是女孩的妈妈，烫着一头黄色大波浪，有着四川妇女独有的彪悍气质，她并不同意我们在
+一起，那时候我太穷了，每个月那工资基本除去我俩的开销，存不了多少钱，更别提买房了。女孩的妈妈某一天杀到成都来，给她女儿买了一套房，然后
+开始给她女儿安排各种相亲。开始女孩是瞒着我的，但是两个人在一起久了，哪怕是情绪的轻微波动，对方都能感知到，我知道女孩那时候是想和我在一起
+的，可是迫于母亲的压力，又很无奈。我感到很难受，不再像从前一样没心没肺的开心了，在最无奈的年纪遇到了想照顾一生的人，原来网上的段子是存在的。
+我脑海里的小人又开始打架了。“她值得更好的，毕竟她家里条件挺好，没必要跟我吃苦。“；“不甘心，我不想失去她，我也可以凭借自己努力，让我们拥有
+好的生活。”。于是，那也是个冬天，我突然变了一个人，我每天早早就把工作完成，剩下的时间恶补专业知识。我是个自学的程序员，不比科班出身的，基础学科
+差太多。不仅上班学，吃饭的时候也一边吃一边看，晚上也要学到凌晨两点睡觉。女孩晚上睡觉前看着我还在电脑面前埋头苦干,心里也百感交集,我想她心里会有
+点感动，同时也会觉得这些努力意义并不大。我心里想的是:"我就是不想失去她，只要有一点希望，我都要付出全力去做。“ 三个月过去了，就到了年后。
+这个年过得并不开心，我心里一直想着这件事情，所有的努力好像还是螳臂当车。正好年后有一个海外的工作机会，薪水多了一倍多，我顺利通过了面试，我告诉
+女孩，我要去海外赚钱，工作一年半载，回来买房结婚，想到要分开，那天晚上我们抱在一起，她哭得厉害，我很心疼。海外的工作很悠闲，早九晚五，一到周末
+同事都出去海边度假了，周末的时候我还在公司看书恶补知识，好几次同事看到我，问我为什么周末还自愿到公司来，要懂得放松。我苦笑了一下，没有告诉他们，
+我心里想回家，那时候最喜欢看的一部电影是《火星救援》:解决一个问题，再解决下下个问题，解决了足够的问题就能回家了。我坚信不疑。没过一年，我换了一家
+更好的海外公司，然后升职成了技术主管。我想我有足够的钱买房结婚了，我迫不及待的告诉女孩这个好消息，女孩儿并没有表现和我一样的兴奋。后面我才知道，她已经
+和她妈妈介绍的相亲对象在一起了，我情绪快要失控，过山车一般俯冲，心提到了嗓子眼，但最后也只能苦笑地接受这个事实。但我始终忘不了女孩给我说过的那句话:"
+他是个小富二代，可能你一辈子都赚不到那么多钱吧。“ 一辈子都赚不到那么多钱!一辈子！直接就给我宣判了个无期徒刑。根据她的描述，大概她觉得上限就三千万的样子。
+嗯，我要争口气，证明女孩是错的。几个月后，我之前的一个老板找到我，他有一个赚钱的项目，却危在旦夕，问我愿不愿意帮他扛下来，我没多想，当天就提了离职，马上去到老板的公司
+。我不怕吃苦，我只缺一个机会，只要有机会在我面前，我会跟鳄鱼一样，咬住不松口。一年时间，从0再组建团队，最难的时候，是系统最不稳定的时候，客户铺天盖地的
+投诉，谩骂;老板夺命连环call,催进度;连续三天没怎么合过眼，顶着窒息的压力指挥团队修复漏洞。最终，我扛过来了，离那口气的目标近了一点。
+
+回到主题,关于“阅读输入”这件事，思考自己的现状及未来，你是否能做个猛人呢？我的过往经历在刺激我，我想确定肯定以及一定我能做一个猛人，我有欲望
+，有欲望就有苦难，猛人就是在苦难中还能不断前行的人。“阅读输入”输入这件事情长期来说对我可太重要了，我想要赚很多的钱，要靠脑子赚钱，认知赚钱，
+就必须长期的阅读输入，这件事情必须做一辈子，终身学习。现在每天我基本上能保证两到三小时的深度阅读时间。我能够做得很猛吗？老师说的挺好的，人差一口气，
+气吞山河的气，我是争那口气，不甘心，永远战斗下去。
+
+
+
 
