--- a/docs/xie-zuo-da-ka/5.31-ri-xie-zuo-da-ka.md
+++ b/docs/xie-zuo-da-ka/5.31-ri-xie-zuo-da-ka.md
@@ -62,7 +62,7 @@
 回到主题,关于“阅读输入”这件事，思考自己的现状及未来，你是否能做个猛人呢？我的过往经历在刺激我，我想确定肯定以及一定我能做一个猛人，我有欲望
 ，有欲望就有苦难，猛人就是在苦难中还能不断前行的人。“阅读输入”输入这件事情长期来说对我可太重要了，我想要赚很多的钱，要靠脑子赚钱，认知赚钱，
 就必须长期的阅读输入，这件事情必须做一辈子，终身学习。现在每天我基本上能保证两到三小时的深度阅读时间。我能够做得很猛吗？老师说的挺好的，人差一口气，
-气吞山河的气，我是争那口气，不甘心，永远战斗下去。
+气吞山河的气，就怕人太佛系了，无欲无求，没有外力的刺激，始终缺那口气。我就是争那口气，不甘心，永远战斗下去。
 
 
 
