--- a/docs/xie-zuo-da-ka/5.31-ri-xie-zuo-da-ka.md
+++ b/docs/xie-zuo-da-ka/5.31-ri-xie-zuo-da-ka.md
@@ -11,7 +11,7 @@
 
 
 # 打卡
-在写“阅读输入“,这件事之前，我想回顾下我自己过往的经历。以前的我是否有过猛人的时候呢？
+在写“阅读输入“,这件事之前，我想先回顾下自己过往的经历。以前的我是否有过猛人的时候呢？
 好像有一两件，不过持续的时间不长，而且都是有一个共性，**在外力的刺激下。**
 
 还记得九年前刚上大学那会儿,很喜欢一个女孩子，决定在她生日的时候送她一个礼物。这件事情我冥思苦想了几天，
