--- a/docs/xie-zuo-da-ka/5.31-ri-xie-zuo-da-ka.md
+++ b/docs/xie-zuo-da-ka/5.31-ri-xie-zuo-da-ka.md
@@ -39,7 +39,7 @@
 你可真他娘的有点生猛。
 
 第二个故事是我毕业三年后的时候，我谈了一个特别喜欢的女朋友，那时候天总是很蓝，日子过得很慢，两个人在一起如胶似漆，感受不到时间的流逝。
-而我自己成都这个安逸的都市，每天正如《成都》里一样，“你会挽着我的衣袖，我会把手揣进裤兜”，慵懒自在。我早已失去了刚毕业的那股拼劲，拿着
+而我在成都这个安逸的都市，每天正如赵雷的《成都》里一样，“你会挽着我的衣袖，我会把手揣进裤兜”，慵懒自在。我早已失去了刚毕业的那股拼劲，拿着
 一份不好不坏的工资，进入了职场的瓶颈期。唯一让我烦恼的是女孩的妈妈，烫着一头黄色大波浪，有着四川妇女独有的彪悍气质，她并不同意我们在
 一起，那时候我太穷了，每个月那工资基本除去我俩的开销，存不了多少钱，更别提买房了。女孩的妈妈某一天杀到成都来，给她女儿买了一套房，然后
 开始给她女儿安排各种相亲。开始女孩是瞒着我的，但是两个人在一起久了，哪怕是情绪的轻微波动，对方都能感知到，我知道女孩那时候是想和我在一起
@@ -60,7 +60,7 @@
 投诉，谩骂;老板夺命连环call,催进度;连续三天没怎么合过眼，顶着窒息的压力指挥团队修复漏洞。最终，我扛过来了，离那口气的目标近了一点。
 
 回到主题,关于“阅读输入”这件事，思考自己的现状及未来，你是否能做个猛人呢？我的过往经历在刺激我，我想确定肯定以及一定我能做一个猛人，我有欲望
-，有欲望就有苦难，猛人就是在苦难中还能不断前行的人。“阅读输入”输入这件事情长期来说对我可太重要了，我想要赚很多的钱，要靠脑子赚钱，认知赚钱，
+，有欲望就有苦难，猛人就是在苦难中还能不断前行的人。“阅读输入”这件事情长期来说对我可太重要了，我想要赚很多的钱，要靠脑子赚钱，认知赚钱，
 就必须长期的阅读输入，这件事情必须做一辈子，终身学习。现在每天我基本上能保证两到三小时的深度阅读时间。我能够做得很猛吗？老师说的挺好的，人差一口气，
 气吞山河的气，就怕人太佛系了，无欲无求，没有外力的刺激，始终缺那口气。我就是争那口气，不甘心，永远战斗下去。
 
