--- a/docs/xie-zuo-da-ka/6.1-ri-xie-zuo-da-ka.md
+++ b/docs/xie-zuo-da-ka/6.1-ri-xie-zuo-da-ka.md
@@ -46,7 +46,7 @@
     - "啊，这么麻烦啊，我还是继续刷抖音，看小姐姐跳舞吧"
 
     问所有人要不要赚两千万，都是要的，他们背后的逻辑却是保持我现在的安逸舒适不变，再给我两千万，你让我过得那么苦，像苦行僧一样的生活，那就出门右转吧。是啊，现在的时代，人太容易得到满足，每天早九晚五，回家刷刷抖音，喝着快乐水，享受着奶头乐不也挺好的吗？干嘛要那么苦追求卓越呢？你告诉我，买房贵，养娃成本高，被时代淘汰，我不追求行了吧，我无欲无求，佛系，不买房，不生娃，躺平的韭菜你割不到我。是的，这样的想法没错，别人也管不到。可是总有一些人，像黑暗中的星星之火一样:
-    - 我想要不平凡的人
+    - 我想要不平凡人生
     - 我想要怒放的生命 
     - 我有气吞山河的气
 
